fix roller out of screen on mobile #13

--- a/frontend/src/app/outputs/outputarea/roller/roller.component.scss
+++ b/frontend/src/app/outputs/outputarea/roller/roller.component.scss
@@ -1,6 +1,6 @@
 .roller-inputs {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
